# Ancabot

darknet_ros/darknet_ros/config/: ancabot.yaml  ancabot_ros.yaml  ros.yaml
darknet_ros/darknet_ros/launch/: ancabot_darknet.launch
dynamixel_sdk/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamixel_sdk/src/dynamixel_sdk/: protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
gscam/examples/: jetson_csi_cam.launch
hexapod_bringup/: CMakeLists.txt  hexapod_bringup.xml  package.xml
hexapod_bringup/launch/: ancabot.launch  ancabot_start.launch  ancabot_steady.launch  debugger.launch  hexapod_simple.launch  navigation_1.launch
hexapod_bringup/launch/components/: button.launch  darknet_ros_csi_cam.launch  darknet_ros_webcam.launch  imu_filter.launch  imu_launch.launch  joy_teleop.launch  locomotion.launch  navigation.launch  object_detection.launch  object_detection_csi_cam.launch  object_detection_webcam.launch  ping_launch.launch  start_button.launch  tof_launch.launch  ultralytic_detection_webcam.launch  ultralytic_webcam.launch  ultralytics_csi_cam.launch  ultralytics_detection_csi_cam.launch  ultralytics_detection_webcam.launch  ultralytics_webcam.launch
hexapod_controller/: CMakeLists.txt  hexapod_controller.xml  package.xml
hexapod_controller/backup/: control.h
hexapod_controller/include/: gait.h  ik.h  servo_driver.h
hexapod_controller/params/: dynamixel.yaml  hexapod.yaml
hexapod_controller/src/: control.cpp  gait.cpp  hexapod_controller.cpp  ik.cpp  servo_driver.cpp
hexapod_description/: CMakeLists.txt  package.xml
hexapod_description/launch/: ancabot_display.launch  display.launch  leptan_display.launch
hexapod_description/meshes/: coxa.stl  femur.stl  gripper_hand.stl  tibia.stl
hexapod_description/rviz/: urdf.rviz
hexapod_description/rviz_prefs/: urdf.rviz
hexapod_description/urdf/: ancabot.xacro  ancabot_model.xacro  leptan.xacro
hexapod_gazebo/: CMakeLists.txt  package.xml
hexapod_gazebo/config/: ancabot_control.yaml
hexapod_gazebo/launch/: ancabot_control.launch  ancabot_gazebo.launch  spawn_hexapod.launch  spawn_sdf_robotdesc.launch
hexapod_gazebo/scripts/: ancabot_move.py  hexapod_move.py
hexapod_gazebo/sdf/: hexapod.sdf
hexapod_gazebo/src/: hexapod_plugin.cc
hexapod_msgs/: CMakeLists.txt  package.xml
hexapod_msgs/msg/: FeetPositions.msg  LegJoints.msg  Pose.msg  RPY.msg  Sounds.msg
imu_sensor/: CMakeLists.txt  README.md  package.xml
imu_sensor/scripts/: euler_orientation.py  imu_logger.py  imu_publisher.py
navigation/: CMakeLists.txt  package.xml
navigation/scripts/: ultralytics_subscriber.py
navigation/src/: nav24_1.cpp  nav24_1_debugger.cpp  nav24_1cpp  navigation_logger.cpp  sensor_debugger.cpp  ultralytics_subscriber.cpp
object_detection/: CMakeLists.txt  package.xml
object_detection/scripts/: center_coordinate_feedback.py  real_time_detection.py
ping_sensor/: CMakeLists.txt  package.xml
ping_sensor/scripts/: parallax_publisher.py
shell_script/: kill_ancabot.sh  navigation.sh  navigation_1.sh  startup.sh  test_button.sh
start_button/: CMakeLists.txt  package.xml
start_button/scripts/: start_button.py  test_button.py
teleop_twist_keyboard_cpp/: CMakeLists.txt  package.xml
teleop_twist_keyboard_cpp/src/: teleop_twist_keyboard.cpp
tof_sensor/: CMakeLists.txt  README.md  package.xml
tof_sensor/scripts/: tof_0.py  tof_1.py  tof_publisher.py
ultralytics_ros/: CMakeLists.txt  README.md
ultralytics_ros/launch/: Ancabot24.launch  Ancabot24_CSI_Cam.launch  detection.launch  tracker.launch
ultralytics_ros/msg/: BoundingBox.msg
ultralytics_ros/script/: detection_node.py
usb_cam/launch/: usb_cam.launch
vision_sensor/: CMakeLists.txt  package.xml
