<?xml version="1.0"?>
<package>
  <name>hexapod_bringup</name>
  <version>0.0.1</version>
  <description>Hexapod package for launching hexapod</description>
  <author email="ancabot.polman@gmail.com">Ancabot</author>
  <maintainer email="ancabot.polman@gmail.com">Ancabot</maintainer>
  <license>None</license>

  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_bringup.xml" />
  </export>
</package>
