<?xml version="1.0"?>
<package format="2">
  <name>hexapod_gazebo</name>
  <version>0.0.0</version>
  <description>Hexapod simulation package</description>
  <author email="ancabot.polman@gmail.com">Ancabot</author>
  <maintainer email="ancabot.polman@gmail.com">Ancabot</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
