<?xml version="1.0"?>
<package>
  <name>hexapod_msgs</name>
  <version>0.0.1</version>
  <description>Custom message package for hexapod</description>
  <author email="ancabot.polman@gmail.com">Ancabot</author>
  <maintainer email="ancabot.polman@gmail.com">Ancabot</maintainer>
  <license>None</license>

  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>